# eguirust

./: Cargo.toml
.github/workflows/: android_build.yml
src/: app_logic.rs  app_view.rs  lib.rs
