[package]
name = "rust_native_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["android-native-activity", "wgpu", "glow"] }
winit = { version = "0.29", features = ["android-native-activity"] }
android-activity = "0.5"
log = "0.4"
android_logger = "0.13"

[package.metadata.android]
package = "com.odfiz.rustnative"
label = "Odfiz UI Test"
build_targets = ["aarch64-linux-android"]
target_sdk_version = 30
min_sdk_version = 21
