[package]
name = "rust_native_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Feature 'default_fonts' dimatikan total
eframe = { version = "0.27", default-features = false, features = ["android-native-activity", "wgpu", "glow"] }
winit = { version = "0.29", features = ["android-native-activity"] }
android-activity = "0.5"
log = "0.4"
android_logger = "0.13"
rand = "0.8"

[package.metadata.android]
package = "com.odfiz.rustnative"
label = "Odfiz RT/RW Net"
build_targets = ["aarch64-linux-android"]
target_sdk_version = 30
min_sdk_version = 21

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.signing.release]
path = "debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[profile.release]
opt-level = "z"      # Fokus ke ukuran binary terkecil
lto = true           # Link Time Optimization (WAJIB untuk size)
codegen-units = 1    # Mengurangi paralelisme demi optimasi lebih dalam
panic = "abort"      # Menghapus overhead unwinding
strip = true         # Menghapus simbol debug dan tabel nama
incremental = false  # Memastikan build bersih untuk optimasi maksimal
